--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
   },
   "homepage": "https://github.com/DavidVujic/_tics.js#readme",
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-eslint": "^1.1.1",
-    "gulp-uglify": "^1.5.1",
-    "node-qunit-phantomjs": "^1.3.0",
-    "qunitjs": "^1.20.0"
+    "gulp": "4.x",
+    "gulp-concat": "2.x",
+    "gulp-eslint": "5.x",
+    "gulp-uglify": "3.x",
+    "node-qunit-phantomjs": "2.x",
+    "qunitjs": "2.x"
+  },
+  "engines": {
+    "node": ">=10.15.0"
   }
 }
